# metamock

./: Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat  metamock.metadata.rst  metamock.rst  modules.rst
make.include/: common.mk
metamock/: __init__.py  cli.py  config.py  default.config  metamock.conf  otp.py  routes.py  server.py  util.py  version.py
metamock/metadata/: __init__.py  bottle.py  otp.py  prompt.py  routes.py
tests/: __init__.py  test_cli.py  test_metamock.py
tests/data/: default-config  test-config
